Use modern DOCTYPE, and fix console overflow behavior

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ canvas {
   grid-template-columns: 200px auto 520px;
   grid-template-rows: 24px auto 20%;
   grid-gap: 0;
-  height: 100%;
+  height: 100vh;
 }
 .menubar {
   grid-column: 1 / 4;
@@ -290,6 +290,7 @@ canvas {
 .console {
   grid-column: 1 / 3;
   grid-row: 3;
+  overflow: hidden;
 }
 .output {
   border: 1px inset #999;
@@ -298,6 +299,7 @@ canvas {
   width: calc(100% - 6px);
   height: calc(100% - 6px);
   overflow: auto;
+  white-space: pre-wrap;
 }
 .output .info {
   color: var(--log-info);
